<resources>
    <string name="app_name">ImakanCustomer</string>


    <!-- NAVIGATION DRAWER OPTIONS NAME-->
    <string name="nav_home">Home</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_addresses">Addresses</string>
    <string name="nav_payments">Payments</string>
    <string name="nav_help">Help</string>
    <string name="nav_logout">Logout</string>
    <!--TITLE-->
    <string name="title_select_category">Select Category</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_select_order">Select Order</string>
    <string name="title_dashboard">Dashbaord</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="str_loading">Loading</string>
    <string name="str_please_wait">Please wait…</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_signup_hint">Enter your details to proceed</string>
    <string name="str_email">Email</string>
    <string name="str_enter_email_here">Enter email here</string>
    <string name="str_passwordhint">Password </string>
    <string name="str_enter_password_here">Enter password here</string>
    <string name="str_forgot_password">Forgot Password? Restore</string>
    <string name="str_here"><b>here</b></string>
    <string name="str_fb">continue with facebook</string>
    <string name="str_google">continue with google</string>
    <string name="str_don_t_have_an_account">Don\'t have an account? Sign up</string>
    <string name="check_internet">Check your internet connection</string>
    <string name="str_fp">Forgot Password?</string>

    <!-- FORGOT PASSWORD -->
    <string name="str_fp_detail">Enter your email address to request a  \n  password reset</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_request">Request</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_register_yourself">Register yourself to proceed.</string>
    <string name="str_first_name">First Name</string>
    <string name="str_enter_first_name">Enter first name</string>
    <string name="str_last_name">Last Name</string>
    <string name="str_enter_last_name">Enter last name</string>
    <string name="str_enter_email">Enter email</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_enter_number">Enter number</string>
    <string name="str_confirm_pass">Confirm Password</string>
    <string name="str_already_account">Already have an account? Sign in</string>
    <string name="str_next">next</string>
    <string name="str_town_city">Town/City</string>
    <string name="str_postal_code_zip">Postal Code/Zip</string>
    <string name="str_location">Location</string>
    <string name="str_no_data">No Data</string>
    <string name="str_list_view">List View</string>
    <string name="noprovider">No Provider Found for this location</string>
    <string name="str_favourite">Favourite</string>
    <string name="str_view_gallery">View Gallery</string>
    <string name="str_about_restaurant">About this restaurant</string>
    <string name="str_dummy_data">Lorem Ipsum is simply dummy text of the printing</string>
    <string name="str_address">Address</string>
    <string name="str_contact">Contact</string>
    <string name="str_expertise">Expertise</string>
    <string name="str_place_order">place order</string>
    <string name="str_report_business">Report Business</string>
    <string name="str_issue">Issue</string>
    <string name="str_brief_us">Brief Us</string>
    <string name="str_enter_description_here">Enter description here</string>
    <string name="str_add_address">Add Address</string>
    <string name="str_save">save</string>
    <string name="str_use_promo_code">Use Promo Code</string>
    <string name="str_delivery_details">Delivery Details</string>
    <string name="str_time">Time:</string>
    <string name="str_date">Date:</string>
    <string name="str_pickup_delivery_address">Pickup/Delivery Address</string>
    <string name="str_contact_number">Contact Number</string>
    <string name="str_personal_request">Personal Request</string>
    <string name="str_type_your_message_here">Type your message here</string>
    <string name="str_total">Total</string>
    <string name="str_proceed_to_checkout">proceed to checkout</string>
    <string name="str_enter_code_here">Enter code here</string>
    <string name="str_apply_now">apply now</string>
    <string name="str_total_number_of_bookings">Total number of bookings</string>
    <string name="str_favourite_restaurant">Favourite Restaurant</string>
    <string name="str_recent_bookings">Recent Bookings</string>
    <string name="str_status">s t a t u s</string>
    <string name="str_invalid_email">Please enter valid email address</string>
    <string name="str_name">Name</string>
    <string name="str_enter_name_here">Enter name here</string>
    <string name="str_date_of_birth">Date Of Birth</string>
    <string name="str_enter_date_of_birth">Enter date of birth</string>
    <string name="str_update">update</string>
    <string name="str_gender">Gender</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_register_on">Register On</string>
    <string name="str_no_order">No Order</string>
    <string name="title_help">Help</string>
    <string name="str_enter_password">Enter password</string>
    <string name="valid_first_name">Enter first name</string>
    <string name="valid__name">Enter first name</string>
    <string name="valid_last_name">Enter last name</string>
    <string name="valid_pass">Enter password</string>
    <string name="valid_conpass">Enter confirm password</string>
    <string name="valid_notmatch">Password doesn\'t match</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="str_enter_brief_msg">Enter Brief Us</string>
    <string name="title_my_address">My Addresses</string>
    <string name="valid_address">Enter address</string>
    <string name="valid_city">Enter city</string>
    <string name="valid_postal_code">Enter postal code</string>
    <string name="countrycode">Country Code</string>
    <string name="loader_please_wait">Please wait...</string>
    <string name="str_enter_address">Enter address</string>
    <string name="str_enter_city">Enter city</string>
    <string name="str_enter_postal_code">Enter postal code</string>
    <string name="str_ok">Ok</string>
    <string name="str_check_internet">Check Internet</string>
    <string name="str_error">Error</string>
    <string name="str_verify_email">Please verify your email address</string>
    <string name="str_message">Message</string>
    <string name="update">update</string>
    <string name="destinationstate">Destination, City, Address</string>
    <string name="category">Cateogory</string>
    <string name="service">Service</string>
    <string name="radius_around">Radius around selected destination</string>
    <string name="title_profile">Profile</string>
    <string name="str_enter_phone_number">Enter phone number</string>
    <string name="valid_phone_number">Enter phone number</string>
    <string-array name="issue">
        <item>App Issue</item>
        <item>Payment Issue</item>
        <item>Service Issue</item>
        <item>Others</item>
    </string-array>


    <string name="str_update_profile_title">Update Profile</string>
    <string name="str_update_profile">Are you sure you want to update your profile ? </string>
    <string name="back">Back</string>
    <string name="no_data">No data</string>
    <string name="str_continue">Continue</string>
    <string name="str_valid_select_services">Please Select Services</string>

</resources>
