<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/nav_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_orders"
            android:title="@string/nav_orders" />
        <item
            android:id="@+id/nav_addresses"
            android:title="@string/nav_addresses" />

        <item
            android:id="@+id/nav_help"
            android:title="@string/nav_help" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/nav_logout" />

    </group>


</menu>
