<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical">

        <com.imakancustomer.utils.CustomerTextViewRegular
            android:id="@+id/dialogue_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/str_message"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <com.imakancustomer.utils.CustomerTextViewRegular
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/str_check_internet"
            android:textColor="@color/colorBlack"
            android:textSize="16sp" />


        <com.imakancustomer.utils.CustomerButton
        android:id="@+id/dialogButtonOK"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@color/colorGreen"
        android:text="@string/str_ok"
        android:textColor="#fff"
        android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>