<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/_20sdp"
        android:paddingTop="@dimen/_20sdp">


        <com.imakancustomer.utils.CustomerTextViewBold
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/str_fp"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="parent" />

        <com.imakancustomer.utils.CustomerTextViewRegular
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/str_fp_detail"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <com.imakancustomer.utils.CustomerEditText
            android:id="@+id/et_forgot_email"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:background="@color/colorLighGray"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <!-- LAST LAYOUT -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/et_forgot_email">

            <com.imakancustomer.utils.CustomerButton
                android:id="@+id/btn_forget_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@color/colorLighGray"
                android:padding="10dp"
                android:text="@string/str_cancel"
                android:textAlignment="center"
                android:textColor="@color/colorGreen" />

            <com.imakancustomer.utils.CustomerButton
                android:id="@+id/btn_forgot_request"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@color/colorGreen"
                android:padding="10dp"
                android:text="@string/str_request"
                android:textAlignment="center"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>


</LinearLayout>